Nytt interface for gyldige perioder for revurdering, og implementasjon.